--- a/appsettings.json
+++ b/appsettings.json
@@ -12,6 +12,9 @@
     "Password": "guest",
     "RecieveChannel": "RC",
     "SenderChannel": "SC"
-  }
-
+  },
+  "SendAPI": {
+    "BaseUrl": "localhost:4000",
+    "Resource" : "MyResource" 
+  } 
 }
