--- a/appsettings.json
+++ b/appsettings.json
@@ -14,7 +14,7 @@
     "SenderChannel": "SC"
   },
   "SendAPI": {
-    "BaseUrl": "localhost:4000",
-    "Resource" : "MyResource" 
-  } 
+    "BaseUrl": "http://localhost:4000/",
+    "Resource": "MyResource"
+  }
 }
