--- a/appsettings.json
+++ b/appsettings.json
@@ -15,6 +15,7 @@
   },
   "SendAPI": {
     "BaseUrl": "http://localhost:4000/",
-    "Resource": "MyResource"
+    "Resource": "MyResource",
+    "MyMethod" :  "POST" 
   }
 }
