--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "RabbitMq": {
-    "HostName": "172.17.0.2",
+    "HostName": "rabbitmqtest",
     "UserName": "guest",
     "Password": "guest",
     "RecieveChannel": "RC",
