added depends_on to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       dockerfile: ./Dockerfile
     ports:
       - 5208:5208
+    depends_on:
+      - "rabbitmq" 
 
   rabbitmq: # login guest:guest
     image: rabbitmq:3-management
